--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,21 +13,18 @@
       test:
         name: Test docker build
         runs-on: ubuntu-latest
-
+    
         steps:
           - uses: actions/checkout@v4
     
           - name: Test building image
             run: docker build -t docker-ansible-cicd .
-
-          - name: Run the built image.
-            run: >-
-              docker run --name test-container -d --privileged
-              -v /sys/fs/cgroup:/sys/fs/cgroup:rw --cgroupns=host
-              docker-ansible-cicd
-
-          - name: Check Ansible is running
-            run: docker exec --tty test-container env TERM=xterm ansible --version
+    
+          - name: Run the built image
+            run: docker run --name test-container -d docker-ansible-cicd sleep infinity
+    
+          - name: Check Ansible is installed
+            run: docker exec test-container ansible --version
 
       release:
         name: Release to Docker Hub
